# djangoProject1_BulletinBoard

./: README.md  docker-compose.yml  dz6.txt  dz7_siege.txt  geekshop_urls.txt  pyproject.toml
.github/workflows/: python-test-branch.yml  python-tests.yml  python-tests2.yml  python-unittest.yml
bulletin_board/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
bulletin_board/migrations/: 0001_initial.py  0002_bboard_user.py  0003_auto_20210718_1416.py  0004_auto_20210718_1419.py  0005_auto_20210718_1833.py  0006_remove_bboard_created_at.py  0007_auto_20210719_1357.py
bulletin_board/templates/bulletin_board/: base.html  by_rubric.html  contacts.html  create.html  index.html  users_info.html
djangoProject1/: celery.py  settings.py  urls.py
users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_phone.py  0003_alter_customuser_phone.py  0004_auto_20210718_1114.py  0005_alter_customuser_phone.py
users/templates/users/: key_expired.html  login.html  password_change.html  profile.html  register.html  success_activate.html  users_list.html
