[tool.poetry]
name = "djangoproject1"
version = "0.1.0"
description = ""
authors = ["NankuF <fireloki87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
Pillow = "^8.3.1"
psycopg2 = "^2.9.1"
django-environ = "^0.4.5"
celery = "^5.1.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
