[tool.poetry]
name = "djangoproject1"
version = "0.1.0"
description = ""
authors = ["NankuF <fireloki87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
Pillow = "^8.3.1"
django-environ = "^0.4.5"
celery = "^5.1.2"
redis = "^3.5.3"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
django-celery-beat = "^2.2.1"
django-celery-results = "^2.2.0"
django-debug-toolbar = "^3.2.1"
django-debug-toolbar-template-profiler = "^2.0.2"
django-extensions = "^3.1.3"
pydotplus = "^2.0.2"
graphviz = "^0.17"
django-redis-cache = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
